syntax = "proto3";

package transaction_service;

option csharp_namespace = "Gateway";

import "shared.proto";

service TransactionService {
  rpc CreateTransaction(CreateTransactionData) returns (CreateTransactionResult);
  rpc GetHistory (GetHistoryOptions) returns (TransactionsHistory);
}

message CreateTransactionData {
  TransactionType type = 1;
  oneof data {
    TransferData transfer_data = 2;
    DepositData deposit_data = 3;
    WithdrawData withdraw_data = 4;
  }
}

message CreateTransactionResult {
  shared.ServiceError error = 1;
}

message TransferData {
  shared.Currency currency = 1;
  int32 amount = 2;
  string src_card_code = 3;
  string dst_card_code = 4;
}

message DepositData {
  shared.Currency currency = 1;
  int32 amount = 2;
  string card_code = 3;
}

message WithdrawData {
  shared.Currency currency = 1;
  int32 amount = 2;
  string card_code = 3;
}

message GetHistoryOptions {
  string card_code = 1;
  int32 month = 2;
  int32 year = 3;
}

enum TransactionType {
  DEPOSIT = 0;
  WITHDRAW = 1;
  TRANSFER = 2;
}

message Transaction {
  string transaction_id = 1;
  TransactionType type = 2;
  string src_card_code = 3;
  string dst_card_code = 4;
  int32 amount = 5;
  string date = 6;
}

message TransactionsHistory {
  repeated Transaction transactions = 1;
  shared.ServiceError error = 2;
}
